update some shell script

--- a/ExtBuild/FunKey/board/funkey_t113/linux.config
+++ b/ExtBuild/FunKey/board/funkey_t113/linux.config
@@ -1,6 +1,5 @@
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZO=y
-# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -56,6 +55,7 @@ CONFIG_PM_DEBUG=y
 CONFIG_PM_ADVANCED_DEBUG=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_JUMP_LABEL=y
+# CONFIG_GCC_PLUGINS is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 # CONFIG_BLK_DEV_BSG is not set
@@ -115,6 +115,7 @@ CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_BCSP=y
 CONFIG_XR_BT_LPM=y
+CONFIG_CFG80211=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 CONFIG_UEVENT_HELPER=y
@@ -147,7 +148,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
-CONFIG_XR829_WLAN=y
+CONFIG_XR829_WLAN=m
 # CONFIG_INPUT_LEDS is not set
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=y
@@ -161,6 +162,7 @@ CONFIG_INPUT_SENSOR=y
 CONFIG_SUNXI_TPADC=y
 CONFIG_SUNXI_GPADC=y
 # CONFIG_SERIO is not set
+# CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_HW_RANDOM is not set
 CONFIG_SUNXI_G2D=y
@@ -203,9 +205,9 @@ CONFIG_SUNXI_REGULATOR_PWM=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_FB=y
 CONFIG_FB_SIMPLE=y
-CONFIG_FB_CONSOLE_SUNXI=y
 CONFIG_DISP2_SUNXI=y
 CONFIG_SUNXI_DISP2_FB_HW_ROTATION_SUPPORT=y
+CONFIG_DISP2_SUNXI_BOOT_COLORBAR=y
 CONFIG_DISP2_SUNXI_DEBUG=y
 # CONFIG_LCD_SUPPORT_HE0801A068 is not set
 # CONFIG_LCD_SUPPORT_WILLIAMLCD is not set
@@ -220,10 +222,6 @@ CONFIG_DISP2_SUNXI_DEBUG=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_BACKLIGHT_PWM=y
-CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
-CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
-CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_HRTIMER=y
@@ -250,8 +248,6 @@ CONFIG_USB_SUNXI_EHCI0=y
 CONFIG_USB_SUNXI_EHCI1=y
 CONFIG_USB_SUNXI_OHCI0=y
 CONFIG_USB_SUNXI_OHCI1=y
-CONFIG_USB_ACM=y
-CONFIG_USB_STORAGE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG=y
 CONFIG_USB_GADGET_VERBOSE=y
@@ -259,15 +255,16 @@ CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_GADGET_DEBUG_FS=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_U_SERIAL_CONSOLE=y
-CONFIG_USB_SUNXI_UDC0=y
-CONFIG_USB_CONFIGFS=y
-CONFIG_USB_CONFIGFS_UEVENT=y
-CONFIG_USB_CONFIGFS_SERIAL=y
-CONFIG_USB_CONFIGFS_ACM=y
-CONFIG_USB_CONFIGFS_RNDIS=y
-CONFIG_USB_CONFIGFS_MASS_STORAGE=y
-CONFIG_USB_CONFIGFS_F_FS=y
-CONFIG_USB_ETH=y
+CONFIG_USB_ZERO=m
+CONFIG_USB_ETH=m
+CONFIG_USB_ETH_EEM=y
+CONFIG_USB_G_NCM=m
+CONFIG_USB_FUNCTIONFS=m
+CONFIG_USB_FUNCTIONFS_ETH=y
+CONFIG_USB_FUNCTIONFS_RNDIS=y
+CONFIG_USB_MASS_STORAGE=m
+CONFIG_USB_G_SERIAL=m
+CONFIG_USB_G_ACM_MS=m
 CONFIG_USB_SUNXI_USB=y
 CONFIG_USB_SUNXI_USB_MANAGER=y
 CONFIG_USB_SUNXI_USB_DEBUG=y
@@ -317,22 +314,24 @@ CONFIG_PWM_SUNXI_GROUP=y
 CONFIG_ANDROID=y
 CONFIG_NVMEM_SUNXI_SID=y
 CONFIG_EXT4_FS=y
+CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_OVERLAY_FS=y
 CONFIG_VFAT_FS=y
 # CONFIG_PROC_PAGE_MONITOR is not set
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
-CONFIG_SQUASHFS=y
-CONFIG_SQUASHFS_FILE_DIRECT=y
-CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
-# CONFIG_SQUASHFS_ZLIB is not set
-CONFIG_SQUASHFS_XZ=y
+CONFIG_CONFIGFS_FS=y
+# CONFIG_MISC_FILESYSTEMS is not set
+# CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS_CODEPAGE_437=y
+CONFIG_NLS_CODEPAGE_936=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_GCM=y
+CONFIG_CRYPTO_ARC4=y
 CONFIG_CRC32_SARWATE=y
+CONFIG_XZ_DEC=y
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
 # CONFIG_XZ_DEC_IA64 is not set
